--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
 
-  <link rel="stylesheet" href="./reset.css">
-  <link rel="stylesheet" href="./style-min.css">
+  <link rel="stylesheet" href="./src/reset.css">
+  <link rel="stylesheet" href="./src/style-min.css">
 
   <title>HOMEYOU</title>
 </head>
