--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
 
   <link rel="stylesheet" href="./src/reset.css">
-  <link rel="stylesheet" href="./src/style-min.css">
+  <link rel="stylesheet" href="./src/style.css">
 
   <title>HOMEYOU</title>
 </head>
@@ -24,20 +24,20 @@
     <div class="header__menu container">
       <div class="menu__logo">
         <figure class="logo__img">
-          <img src="./src/img/icons/home.svg" alt="Logo Homeyou">
+          <a href="./index.html"><img src="./src/img/icons/home.svg" alt="Logo Homeyou"></a>
         </figure>
         <h1>Homeyou</h1>
       </div>
 
       <nav class="menu__nav">
         <ul class="nav__primary">
-          <li><a href="">Início</a></li>
-          <li><a href="">Galeria</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="./index.html">Início</a></li>
+          <li><a href="./pages/gallery.html">Galeria</a></li>
+          <li><a href="./pages/contact.html">Contato</a></li>
         </ul>
         <ul class="nav__second">
           <li>
-            <a href="">
+            <a href="./pages/login.html">
               <svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16.6666 17.5V15.8333C16.6666 14.9493 16.3154 14.1014 15.6903 13.4763C15.0652 12.8512 14.2173 12.5 13.3333 12.5H6.66658C5.78253 12.5 4.93468 12.8512 4.30956 13.4763C3.68444 14.1014 3.33325 14.9493 3.33325 15.8333V17.5" stroke="#272727" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M10.0001 9.16667C11.841 9.16667 13.3334 7.67428 13.3334 5.83333C13.3334 3.99238 11.841 2.5 10.0001 2.5C8.15913 2.5 6.66675 3.99238 6.66675 5.83333C6.66675 7.67428 8.15913 9.16667 10.0001 9.16667Z" stroke="#272727" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -69,7 +69,7 @@
       <div class="content__info">
         <h1>Ajudar você a encontrar o melhor conforto, <br> é nossa prioridade.</h1>
         <p>Encontre uma variedade de propriedades que combinam com você. Esqueça todas as dificuldades em encontrar uma residência.</p>
-        <a class="main__btn" href="">Entre em contato</a>
+        <a class="main__btn" href="./pages/contact.html">Entre em contato</a>
         <a href="">Mais sobre nós</a>
       </div>
       <img src="./src/img/foto-intro.jpg" alt="Foto de uma casa moderna">
@@ -85,7 +85,7 @@
         <h2>Design Minimalista</h2>
         <p>Móveis apenas essenciais e com design moderno, além de revestimentos bonitos e em cores neutras para manter a casa sempre com um estilo clean e suave.</p>
       </div>
-      <a href="">Quero saber mais sobre os designs</a>
+      <a href="./pages/gallery.html">Quero saber mais sobre os designs</a>
     </div>
   </section>
 
@@ -126,27 +126,27 @@
       <div class="footer__info">
         <h3>Produtos</h3>
         <ul>
-          <li><a href="">Mobilia</a></li>
-          <li><a href="">Segurança</a></li>
-          <li><a href="">Design Interior</a></li>
+          <li><a href="./pages/gallery.html">Mobilia</a></li>
+          <li><a href="./pages/gallery.html">Segurança</a></li>
+          <li><a href="./pages/gallery.html">Design Interior</a></li>
         </ul>
       </div>
 
       <div class="footer__info">
         <h3>Mais Informações</h3>
         <ul>
-          <li><a href="">Contrato</a></li>
+          <li><a href="./pages/contact.html">Contato</a></li>
           <li><a href="">Sobre nós</a></li>
-          <li><a href="">Termos e Condições</a></li>
+          <li><a href="./pages/terms.html">Termos e Condições</a></li>
         </ul>
       </div>
 
       <div class="footer__info">
         <h3>Redes Sociais</h3>
         <ul>
-          <li><a href="">Pinterest</a></li>
-          <li><a href="">Facebook</a></li>
-          <li><a href="">Instagram</a></li>
+          <li><a href="https://br.pinterest.com/" target="_blank">Pinterest</a></li>
+          <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/matheusfelipetp/" target="_blank">Instagram</a></li>
         </ul>
       </div>
     </div>
