--- a/pages/terms.html
+++ b/pages/terms.html
@@ -73,7 +73,7 @@
 
   <main class="container terms">
     <div class="terms__info">
-      <h3>1. Política de estorno</h3>
+      <h3>1. Política de venda de imóveis</h3>
       <p>
         1.1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       <p>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="terms__info">
-      <h3>3. Seguro Bikcraft</h3>
+      <h3>3. Aluguéis de casa</h3>
       <p>
         3.1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       <p>
