--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1>Ajudar você a encontrar o melhor conforto, <br> é nossa prioridade.</h1>
         <p>Encontre uma variedade de propriedades que combinam com você. Esqueça todas as dificuldades em encontrar uma residência.</p>
         <a class="main__btn" href="./pages/contact.html">Entre em contato</a>
-        <a href="">Mais sobre nós</a>
+        <a href="./pages/login.html">Acesse sua conta</a>
       </div>
       <img src="./src/img/foto-intro.jpg" alt="Foto de uma casa moderna">
     </div>
@@ -136,7 +136,7 @@
         <h3>Mais Informações</h3>
         <ul>
           <li><a href="./pages/contact.html">Contato</a></li>
-          <li><a href="">Sobre nós</a></li>
+          <li><a href="./pages/login.html">Área do usuário</a></li>
           <li><a href="./pages/terms.html">Termos e Condições</a></li>
         </ul>
       </div>
