--- a/pages/terms.html
+++ b/pages/terms.html
@@ -121,7 +121,7 @@
         <h3>Mais Informações</h3>
         <ul>
           <li><a href="./contact.html">Contato</a></li>
-          <li><a href="">Sobre nós</a></li>
+          <li><a href="./pages/login.html">Área do usuário</a></li>
           <li><a href="./terms.html">Termos e Condições</a></li>
         </ul>
       </div>
