--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -108,7 +108,7 @@
       <img src="../src/img/gallery page/img12.jpg" alt="">
     </figure>
 
-       <figure>
+    <figure>
       <img src="../src/img/gallery page/img3.jpg" alt="">
     </figure>
 
@@ -139,7 +139,7 @@
         <h3>Mais Informações</h3>
         <ul>
           <li><a href="./contact.html">Contato</a></li>
-          <li><a href="">Sobre nós</a></li>
+          <li><a href="./pages/login.html">Área do usuário</a></li>
           <li><a href="./terms.html">Termos e Condições</a></li>
         </ul>
       </div>
