--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
 
   <link rel="stylesheet" href="../src/reset.css">
-  <link rel="stylesheet" href="../src/style.css">
+  <link rel="stylesheet" href="../src/style.min.css">
 
   <title>HOMEYOU | Login do usuário</title>
 </head>
