--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -129,9 +129,9 @@
       <div class="footer__info">
         <h3>Produtos</h3>
         <ul>
-          <li><a href="">Mobilia</a></li>
-          <li><a href="">Segurança</a></li>
-          <li><a href="">Design Interior</a></li>
+          <li><a href="./gallery.html">Mobilia</a></li>
+          <li><a href="./gallery.html">Segurança</a></li>
+          <li><a href="./gallery.html">Design Interior</a></li>
         </ul>
       </div>
 
